# mpilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
babelarr/: __init__.py  __main__.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: MIGRATION.md
docs/deploy/: launchd.plist  systemd.service
docs/design/: complementary-search.md
docs/legacy/babelarr/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/legacy/babelarr/.github/workflows/: ci.yml
docs/legacy/qbitlarr/: .env.example  .gitignore  LICENSE  README.fr.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
docs/legacy/qbitlarr/.github/workflows/: tests.yml
mcp_server/: __init__.py  notifications.py  server.py
media_subtitle_translator/: __init__.py  __main__.py
media_workflow_runtime/: __init__.py  __main__.py
src/mpilot/: __init__.py  cli.py
src/mpilot/acquisition/: __init__.py  cli.py  client.py  config.py  env.py  exceptions.py  models.py
src/mpilot/acquisition/domain/: __init__.py  choice_table.py  complementary_search.py  download_progress.py  imdb_identity.py  quality.py  save_paths.py  search_results.py  torrent_metadata.py
src/mpilot/acquisition/services/: __init__.py  prowlarr.py  qbittorrent.py  query_snapshots.py  wikidata.py
src/mpilot/api/: __init__.py  auth.py  complementary_search.py  download.py  downloads_list.py  handle.py  main.py  prowlarr.py  query_snapshots.py  search.py
src/mpilot/core/: __init__.py  dotenv.py  env.py  hermes.py  json_store.py  targets.py  telegram.py
src/mpilot/daemon/: __init__.py  cli.py
src/mpilot/mcp/: __init__.py  acquisition_helpers.py  acquisition_notifications.py  legacy_qbitlarr.py  qbitlarr_notifications.py  server.py
src/mpilot/runtime/: __init__.py  cli.py  dispatcher.py  mcp_server.py
src/mpilot/subtitles/: __init__.py  ass.py  cli.py  env.py  jobs.py  languages.py  local_resolver.py  mcp_server.py  normalize.py  notifications.py  planner.py  plex.py  plex_resolver.py  provider_policy.py  season_workflow.py  source.py  srt.py  subtitle_matching.py  text.py  translate.py  workflow.py
src/mpilot/subtitles/providers/: __init__.py  base.py  opensubtitles.py  subdl.py
tests/: test_user_facing_language_audit.py
tests/acquisition/: test_complementary_search.py  test_download_notifications.py  test_download_progress_rendering.py  test_imdb_identity.py  test_open_source_hygiene.py  test_prowlarr.py  test_qbitlarr_api.py  test_qbitlarr_cli.py  test_qbitlarr_handle.py  test_qbitlarr_mcp.py  test_qbittorrent.py  test_save_paths.py  test_torrent_metadata.py  test_wikidata_resolver.py
tests/core/: test_dotenv.py  test_infrastructure.py
tests/subtitles/: test_cli_errors.py  test_daemon.py  test_env_loading.py  test_jobs.py  test_mcp_server.py  test_normalize.py  test_notifications.py  test_plex_and_ass.py  test_plex_resolver.py  test_public_babelarr_package.py  test_public_mpilot_subtitles_package.py  test_runtime.py  test_runtime_cli.py  test_runtime_dispatcher.py  test_runtime_mcp_server.py  test_season_workflow.py  test_source_acquisition.py  test_srt.py  test_subtitle_matching.py  test_subtitle_plan.py  test_subtitle_providers.py  test_text.py  test_translate_backend.py  test_translate_plex_workflow.py  test_unified_mcp_server.py  test_workflow_cli.py  test_workflow_output.py  test_workflow_remote_output.py
