[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpilot"
version = "0.1.0"
description = "Unified media acquisition, subtitle automation, runtime, REST, CLI, and MCP tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MPilot contributors" }]
keywords = ["media", "automation", "subtitles", "mcp", "qbittorrent", "prowlarr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
]

[project.optional-dependencies]
download = [
  "fastapi==0.139.0",
  "starlette==1.3.1",
  "uvicorn[standard]==0.51.0",
  "httpx==0.28.1",
  "qbittorrent-api==2026.7.0",
  "fastapi-mcp==0.4.0",
]
subtitles = []
mcp = [
  "mcp==1.28.1",
]
all = [
  "fastapi==0.139.0",
  "starlette==1.3.1",
  "uvicorn[standard]==0.51.0",
  "httpx==0.28.1",
  "qbittorrent-api==2026.7.0",
  "fastapi-mcp==0.4.0",
  "mcp==1.28.1",
]
dev = [
  "httpx2==2.5.0",
  "pytest==9.1.1",
  "ruff==0.14.10",
]

[project.scripts]
mpilot = "mpilot.cli:main"
mpilot-mcp = "mpilot.mcp.server:main"
mpilot-daemon = "mpilot.daemon.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
  "mpilot*",
]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests/acquisition", "tests/subtitles", "tests/core"]
pythonpath = ["src", "."]
