[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qbitlarr"
version = "0.1.0"
description = "A Prowlarr to qBittorrent bridge with REST, MCP, and CLI support."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.14",
  "uvicorn[standard]==0.35.0",
  "httpx==0.28.1",
  "qbittorrent-api==2026.5.1",
  "mcp==1.26.0",
  "fastapi-mcp==0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[project.scripts]
qbitlarr = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]
